<resources>
    <string name="app_name">Computer Store</string>
    <string name="list">List</string>
    <string name="nearest">Nearest</string>
    <string name="location">Location</string>
    <string name="computer_store">Computer Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="tag_line">your realiable computer store</string>
    <string name="app_version">v.1</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="detailWelcome">Hello there, sign in to continue !</string>
    <string name="welcome">Welcome Back</string>
    <string name="password">Password</string>
    <string name="usernameHint">Enter your username</string>
    <string name="passwordHint">Enter your password</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="welcomeSignUp">Hi there</string>
    <string name="welcomeBack">Welcome back.</string>
    <string name="detailWelcomeSignUp">Register your account to participate in.</string>
    <string name="storeName">Store Name</string>
    <string name="storeNameHint">Enter your store name</string>
    <string name="address">Address</string>
    <string name="addressHint">Enter your address</string>
    <string name="latLngHint">Enter your Latitude and Longitude</string>
    <string name="latHint">Enter your Latitude</string>
    <string name="lngHint">Enter your Longitude</string>
    <string name="set">Set Coordinate</string>
    <string name="checkInternet">Checking your internet connection.</string>
    <string name="image">image</string>

    <string name="detail_tab_text_1">Overview</string>
    <string name="detail_tab_text_2">Computer</string>
    <string name="calling">Calling</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="detail">Detail</string>
    <string name="unverified">Not yet verified</string>
    <string name="verified">Already verified</string>
    <string name="waiting">12 Waiting</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="no_data_available">No data Available</string>
    <string name="emailHint">Enter your Email</string>
    <string name="phoneHint">Enter your Phone Number</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="update">Update</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_type">Type</string>
    <string name="product_unit">Unit</string>
    <string name="specification">Specification</string>
    <string name="add_data">Add Data</string>
    <string name="update_data">Update Data</string>
    <string name="productAdd">Product Add</string>
    <string name="choose_computer_store_area">Choose Computer Store Area</string>
    <string name="openHint">Open Store</string>
    <string name="closeHint">Closed Store</string>


    <style name="adminMember">
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_marginStart">12dp</item>
        <item name="android:layout_marginEnd">32dp</item>
    </style>

    <style name="loginSignupConfig">
        <item name="android:layout_width">0dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_marginStart">32dp</item>
        <item name="android:layout_marginEnd">32dp</item>
    </style>

    <string-array name="productType">
        <item>Computer</item>
        <item>Accessory</item>
    </string-array>

    <string-array name="computerStoreArea">
        <item>Sudirman</item>
        <item>Riau</item>
        <item>Ahmad Yani</item>
        <item>Durian</item>
        <item>Tambusai</item>
        <item>Soekarno-Hatta</item>
    </string-array>

    <string-array name="filter_options">
        <item>Haversine</item>
        <item>Euclidean</item>
    </string-array>
</resources>